--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ button {
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
     color: black;
+    border-radius: 4px;
     
 }
 button:hover {
