--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ button:hover {
     background-color: bisque;
     
 }
+
+myDiv {
+    font-size: 100px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    
+}
